# code-breakfast-vertex-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml  readme.md
notebooks/: 1-run-local.ipynb  2-run-pipeline.ipynb
notebooks/answers/: 1-run-local.ipynb  2-run-pipeline.ipynb
scripts/: generate_data.py  generate_fashion_mnist_data.py
src/fancy_fashion/: automl.py  cli.py  create_model.py  dataset.py  generate_fashion_mnist_data.py  model.py  util.py  validation.py
tests/fancy_fashion/: test_model.py
