[tool.poetry]
name = "fancy_fashion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
pylint = "^2.12.2"
click = "^8.0.4"
tensorflow = "^2.8.0"
Pillow = "^9.0.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fancy-fashion = 'fancy_fashion.cli:cli'
